--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Fengrui Gan",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^5.3.0",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
